syntax = "proto3";

option java_package = "plagiatchecker.accountservice.proto";
option java_outer_classname = "AccountServiceProto";

service AccountService {
  rpc GetAccountBalance (GetAccountBalanceRequest) returns (GetAccountBalanceResponse);
  rpc CreateAccount (CreateAccountRequest) returns (CreateAccountResponse);
  rpc Deposit (DepositRequest) returns (DepositResponse);
}


message GetAccountBalanceRequest {
  int64 account_id = 1;
}

message GetAccountBalanceResponse {
  string amount = 1;
}

message CreateAccountRequest {
  int64 user_id = 1;
}

message CreateAccountResponse {
  int64 account_id = 1;
}

message DepositRequest {
  int64 user_id = 1;
  string amount = 2;
}

message DepositResponse {
  string amount = 1;
}
